<resources>
    <string name="app_name">Study Date</string>

    <string name="email">Email</string>
    <string name="email_hint">Nhập email của bạn</string>

    <string name="password">Mật khẩu</string>
    <string name="password_hint">Nhập mật khẩu</string>

    <string name="forgot_password">Quên mật khẩu?</string>

    <string name="login">Đăng nhập</string>

    <string name="register">Đăng kí ngay</string>

    <string name="no_account">Chưa có tài khoản</string>

    <string name="toggle_password">Hiện hoặc ẩn mật khẩu</string>
    <string name="last_name">Họ</string>
    <string name="first_name">Tên</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>

    <string name="back">Quay lại</string>
    <string name="gender">Giới tính</string>
    <string name="date">Ngày sinh</string>
    <string name="choose_date">Chọn ngày sinh</string>
    <string name="had_account">Đã có tài khoản? Đăng nhập</string>
    <string name="verify_otp">Xác thực Email</string>
    <string name="otp_description">Chip đã gửi mã otp vào Email mà bạn đã đăng ký rồi đó!</string>
    <string name="input_otp">Vui lòng nhập mã OTP</string>
    <string name="verify">Xác thực</string>
    <string name="resend_otp">Gửi lại</string>
    <string name="verify_email">Bạn cần xác thực email!</string>
    <string name="verify_your_email">Nhấn Nhận mã OTP để nhận mã nhé!\nChíp sẽ gửi OTP tới abc123@gmail.com</string>
    <string name="send_email">Nhận mã OTP</string>
    <string name="create_new_password">Hãy tạo mật khẩu mới!</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="confirm">Xác nhận</string>
    <string name="verify_security">Bạn cần xác thực bảo mật!</string>
    <string name="input_email">Nhập email nhận mã</string>
    <string name="profile_title">Hồ sơ cá nhân</string>
    <string name="username">Username</string>
    <string name="id">ID:</string>
    <string name="friends">Bạn bè:</string>
    <string name="introduction">Dòng giới thiệu</string>
    <string name="update_profile">Chỉnh sửa trang cá nhân</string>
    <string name="infor">Thông tin cá nhân</string>
    <string name="age">Tuổi:</string>
    <string name="sex">Giới tính:</string>
    <string name="school">Trường học:</string>
    <string name="major">Ngành học:</string>
    <string name="country">Quê quán:</string>
    <string name="setting">Cài đặt tài khoản</string>
    <string name="favorite">Yêu thích</string>
    <string name="appointment">Cuộc hẹn</string>
    <string name="honor">Danh hiệu</string>
    <string name="add_infor">+ Thêm thông tin</string>
    <string name="save_changes">Lưu thay đổi</string>
    <string name="register_infor">Thông tin đăng kí</string>
    <string name="help">Trợ giúp</string>
    <string name="log_out">Đăng xuất</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="enable_radar">Cho phép quét rada</string>
    <string name="notification_settings">Cài đặt thông báo</string>
    <string name="blocked_users_title">Danh sách chặn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who">Bạn muốn tìm ai?</string>

    <string name="send">Gửi</string>
    <string name="send_message">Nhắn tin</string>
    <string name="distance_format">Cách bạn %.2f km</string>
    <string name="otp_sent_to_email">Mã OTP đã được gửi đến email:\n%1$s</string>
    <string name="resend_otp_countdown">Gửi lại (%1$ds)</string>
    <string name="verify_your_email_format">Nhấn Nhận mã OTP để nhận mã nhé!\nChíp sẽ gửi OTP tới %1$s</string>
    <string name="error_empty_email">Vui lòng nhập email</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="title_friends">Bạn bè &amp; Tin nhắn</string>
    <string name="hint_search_friends">Tìm kiếm bạn bè, cuộc trò chuyện...</string>
    <string name="hint_type_message">Nhập tin nhắn...</string>
    <string name="desc_options">Tùy chọn</string>
    <string name="option_pin">Ghim</string>
    <string name="option_create_group">Tạo nhóm</string>
    <string name="option_view_profile">Xem hồ sơ</string>
    <string name="option_block">Chặn</string>
    <string name="option_delete">Xóa</string>
    <string name="option_profile">Hồ sơ</string>
    <string name="option_mute_notifications">Tắt thông báo</string>
    <string name="option_delete_friend">Xóa bạn</string>
    <string name="title_schedule">Thời gian biểu</string>
    <string name="schedule_mascot_speech">Thời gian biểu của\ncậu nè!</string>
    <string name="title_create_appointment">Tạo cuộc hẹn</string>
    <string name="title_create_appointment_with">Tạo cuộc hẹn với %1$s</string>
    <string name="label_select_date">Chọn ngày hẹn</string>
    <string name="label_select_time">Chọn giờ hẹn</string>
    <string name="label_mode">Hình thức</string>
    <string name="label_location_info">Thông tin địa điểm</string>
    <string name="label_location_name">Tên địa điểm (tùy chọn)</string>
    <string name="label_street">Đường</string>
    <string name="label_district">Quận/ huyện</string>
    <string name="label_province">Tỉnh/ thành phố</string>
    <string name="label_set_recurring">Đặt làm cố định</string>
    <string name="btn_create">Tạo</string>
    <string name="title_booking_detail">Chi tiết cuộc hẹn</string>
    <string name="btn_accept">Chấp nhận</string>
    <string name="btn_reject">Từ chối</string>
    <string name="btn_complete">Hoàn thành</string>
    <string name="btn_cancel">Hủy hẹn</string>
    <string name="btn_rate">Gửi đánh giá</string>
    <string name="rate_partner">Đánh giá đối phương</string>
    <string name="day_mon">Hai</string>
    <string name="day_tue">Ba</string>
    <string name="day_wed">Tư</string>
    <string name="day_thu">Năm</string>
    <string name="day_fri">Sáu</string>
    <string name="day_sat">Bảy</string>
    <string name="day_sun">CN</string>
    <string name="title_notification">Thông báo</string>
    <string name="section_recent">Mới đây</string>
    <string name="section_earlier">Trước đó</string>
    <string name="title_booking_invite">Lời mời cuộc hẹn</string>
    <string name="title_booking_reminder">Nhắc nhở cuộc hẹn</string>
    <string name="btn_view_detail">Xem chi tiết</string>
    <string name="btn_close">Đóng</string>
    <string name="booking_created_success">Đặt lịch hẹn thành công!</string>
    <string name="booking_cancelled">đã hủy lịch hẹn.</string>
    <string name="booking_cancel_reason">Lí do: %1$s</string>
    <string name="booking_accept">Đồng ý</string>
    <string name="booking_reject">Từ chối</string>
    <string name="mark_all_read">Đánh dấu tất cả đã đọc</string>
    <string name="empty_notification">Bạn chưa có thông báo nào</string>
    <string name="reminder_dialog_header">Nhắc nhở cuộc hẹn sắp diễn ra!</string>
    <string name="reminder_dialog_subtext">Cuộc hẹn của bạn sẽ diễn ra sau 30 phút nữa</string>
    <string name="reminder_dialog_view_schedule">Xem thời gian biểu</string>
    <string name="reminder_push_title">Nhắc nhở cuộc hẹn (Sau 30 phút)</string>
    <string name="reminder_push_content_format">Cuộc hẹn \'%1$s\' của bạn sẽ diễn ra sau 30 phút nữa (%2$s)!</string>
    <string name="reminder_push_content_short_format">Cuộc hẹn \'%1$s\' của bạn sẽ diễn ra sau 30 phút nữa!</string>
    <string name="dialog_notification_options_title">Tùy chọn thông báo</string>
    <string name="delete_this_notification">Xóa thông báo này</string>
    <string name="cancel">Hủy</string>
    <string name="mark_all_read_success">Đã đánh dấu tất cả là đã đọc</string>
    <string name="delete_notification_success">Đã xóa thông báo</string>
    <string name="delete_all_notifications_success">Đã xóa tất cả thông báo</string>
    <string name="toast_system_notif_on">Đã bật thông báo hệ thống</string>
    <string name="toast_system_notif_off">Đã tắt thông báo hệ thống</string>
    <string name="toast_appointment_notif_on">Đã bật thông báo Lịch hẹn</string>
    <string name="toast_appointment_notif_off">Đã tắt thông báo Lịch hẹn</string>
    <string name="toast_schedule_notif_on">Đã bật thông báo thời gian biểu</string>
    <string name="toast_schedule_notif_off">Đã tắt thông báo thời gian biểu</string>
    <string name="or_login_with">Hoặc đăng nhập bằng</string>
    <string name="google">Google</string>
    <string name="default_web_client_id">725853428782-u30n26t3bveqdf7p366q4ehe7cl4o79j.apps.googleusercontent.com</string>
</resources>